--- a/src/app/orbit-list/orbit-list.component.css
+++ b/src/app/orbit-list/orbit-list.component.css
@@ -4,16 +4,16 @@
 }
 
 .warning {
-    background-color: #da8a8a;
+    background-color:#F08D1D;
 }
 
 table {
-  color: #111;
-  border-radius: 5px;
+  color: #741BF2;
+  border-radius: 10px;
   overflow: hidden;
-  margin: 12px 0;
+  margin: 17px 0;
   min-width: 300px;
-  background: #dad8d8;
+  background: #eee8e8;
 }
 
 .header-row {
