--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
 <app-orbit-list [satellites]="sourceList"></app-orbit-list>
+<div class="search-form"><input>(keyup.enter)= search(searchTerm.value)</div>
