--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,11 @@
 <app-orbit-list [satellites]="sourceList"></app-orbit-list>
-<div class="search-form"><input>(keyup.enter)= search(searchTerm.value)</div>
+<div class="search-form">
+    <input (keyup.enter)= "search(searchTerm.value)"/>
+    <button (click)= "search(searchTerm.value)"></button>
+    
+
+
+
+
+
+</div>
