--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
-<app-orbit-list [satellites]="sourceList"></app-orbit-list>
+<app-orbit-list [satellites]="displayList"></app-orbit-list>
 
 
 
 <div class="search-form">
-  <form>
-    <label><strong>Search: </strong><input #searchTerm type= "text" (keyup.enter)="search('searchTerm.value')"></label>
-    <label><button (click)="search(searchTerm.value)">Submit</button></label>
-  </form>
+  
+    <strong>Search: </strong><input #searchTerm type="text" (keyup.enter)="search(searchTerm.value)">
+    <button (click)="search(searchTerm.value)">Search</button>
+  
 </div>
 
   
